Revert "Add smooth elastic animation for page transitions when crossing threshold"
This reverts commit c7258d84db7294ad5eaa34046c38049045d88059.

--- a/OldiOSExperience/Pages/Springboard/Springboard.razor
+++ b/OldiOSExperience/Pages/Springboard/Springboard.razor
@@ -270,13 +270,11 @@
             {
                 // Swiped left, go to next page
                 currentPageIndex++;
-                await AnimatePageTransition();
             }
             else if (dragOffset > 0 && currentPageIndex > -1)
             {
                 // Swiped right, go to previous page (can go to spotlight at -1)
                 currentPageIndex--;
-                await AnimatePageTransition();
             }
             else
             {
@@ -284,6 +282,11 @@
                 await AnimateRubberBandBack();
                 return;
             }
+            
+            // End drag and reset offset for page change
+            isDragging = false;
+            dragOffset = 0;
+            StateHasChanged();
         }
         else
         {
@@ -291,33 +294,6 @@
             await AnimateRubberBandBack();
             return;
         }
-    }
-    
-    private async Task AnimatePageTransition()
-    {
-        // Smoothly animate the remaining drag offset to 0 as the page transitions
-        // This creates an elastic/smooth completion of the page change
-        isAnimatingBack = true;
-        isDragging = false;
-        
-        var startOffset = dragOffset;
-        var duration = 300; // ms
-        var startTime = DateTime.Now;
-        
-        while ((DateTime.Now - startTime).TotalMilliseconds < duration)
-        {
-            var elapsed = (DateTime.Now - startTime).TotalMilliseconds;
-            var progress = elapsed / duration;
-            // Use ease-out cubic for smooth deceleration
-            var eased = 1 - Math.Pow(1 - progress, 3);
-            dragOffset = startOffset * (1 - eased);
-            StateHasChanged();
-            await Task.Delay(16); // ~60fps
-        }
-        
-        dragOffset = 0;
-        isAnimatingBack = false;
-        StateHasChanged();
     }
     
     private async Task AnimateRubberBandBack()
@@ -406,12 +382,10 @@
             if (dragOffset < 0 && currentPageIndex < Pages.Count - 1)
             {
                 currentPageIndex++;
-                await AnimatePageTransition();
             }
             else if (dragOffset > 0 && currentPageIndex > -1)
             {
                 currentPageIndex--;
-                await AnimatePageTransition();
             }
             else
             {
@@ -419,6 +393,11 @@
                 await AnimateRubberBandBack();
                 return;
             }
+            
+            // End drag and reset offset for page change
+            isDragging = false;
+            dragOffset = 0;
+            StateHasChanged();
         }
         else
         {
