--- a/OldiOSExperience/System/DebugMenu.razor
+++ b/OldiOSExperience/System/DebugMenu.razor
@@ -25,7 +25,10 @@
                     <select class="debug-select" @bind="SelectedPreset" @bind:event="onchange">
                         <option value="@DevicePreset.iPhone4">iPhone 4 (640x960)</option>
                         <option value="@DevicePreset.iPhone5">iPhone 5 (640x1136)</option>
+                        <option value="@DevicePreset.iPhone6">iPhone 6 (750x1334)</option>
+                        <option value="@DevicePreset.iPhone6Plus">iPhone 6 Plus (1080x1920)</option>
                         <option value="@DevicePreset.iPad">iPad Retina (1536x2048)</option>
+                        <option value="@DevicePreset.iPadMini">iPad mini (768x1024)</option>
                         <option value="@DevicePreset.Custom">Custom</option>
                     </select>
                 </div>
