--- a/OldiOSExperience/wwwroot/css/app.css
+++ b/OldiOSExperience/wwwroot/css/app.css
@@ -5,6 +5,7 @@ html, body {
     height: 100%;
     width: 100%;
     overflow: hidden; /* Prevents scrollbars */
+    font-family: "Helvetica Neue", Helvetica, Arial,sans-serif
 }
 
 
