--- a/OldiOS/OldiOS.Shared/Pages/Springboard/Components/AppIcon.razor.css
+++ b/OldiOS/OldiOS.Shared/Pages/Springboard/Components/AppIcon.razor.css
@@ -21,10 +21,11 @@
     background-repeat: no-repeat;
     background-position: center;
     /* Position shadow behind and slightly below the icon */
-    top: 40px; /* Lowered by 40px as mentioned */
+    top: 0px;
     left: 50%;
     transform: translateX(-50%);
     z-index: -1;
+    opacity: 0.7;
     pointer-events: none;
 }
 
