--- a/OldiOS/OldiOS.Shared/Apps/UIKit/UINavigationBar.razor.css
+++ b/OldiOS/OldiOS.Shared/Apps/UIKit/UINavigationBar.razor.css
@@ -2,14 +2,14 @@
 
 .uinavigationbar {
     height: 88px;
-    background: linear-gradient(to bottom, #b0b9c5 0%, #8e98a6 50%, #6d7886 51%, #4e5866 100%);
+    /*    background: linear-gradient(to bottom, #b0b9c5 0%, #8e98a6 50%, #6d7886 51%, #4e5866 100%);*/
+    background-image: url(/_content/OldiOS.Shared/images/uikit/UINavigationBar_bg.png);
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 0 20px;
     border-bottom: 1px solid #2d3845;
-    position: relative;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+    position: relative; 
 }
 
 .navbar-left,
@@ -29,7 +29,7 @@
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 40px;
     font-weight: bold;
-    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.5);
+    text-shadow: 0 -2px 0 rgba(0, 0, 0, 0.5);
 }
 
 .navbar-back-button,
