Use first and lastchild instead of whatever we were using before

--- a/OldiOS/OldiOS.Shared/Apps/UIKit/UITableViewCell.razor.css
+++ b/OldiOS/OldiOS.Shared/Apps/UIKit/UITableViewCell.razor.css
@@ -12,11 +12,11 @@
     transition: background-color 0.1s ease;
 }
 
-.uitableviewcell.first {
+.uitableviewcell:first-child {
     border-top: none;
 }
 
-.uitableviewcell.last {
+.uitableviewcell:last-child {
     border-bottom: none;
 }
 
