--- a/OldiOS/OldiOS.Shared/Apps/UIKit/UITableViewSection.razor.css
+++ b/OldiOS/OldiOS.Shared/Apps/UIKit/UITableViewSection.razor.css
@@ -14,12 +14,46 @@
 }
 
 .section-content {
-    background: #F5F5F5;
-    border-radius: 16px;
-    overflow: hidden;
-    box-shadow: 0 0px 0px 2px rgba(0, 0, 0, 0.5);
-    border-top: 2px solid #DFDFDF;
+    position: relative;
+    background-color: #F5F5F5;
+    border-radius: 20px;
+    overflow: visible;
 }
+
+    .section-content ::deep > :first-child {
+        border-top-left-radius: 20px;
+        border-top-right-radius: 20px;
+    }
+
+    .section-content ::deep > :last-child {
+        border-bottom-left-radius: 20px;
+        border-bottom-right-radius: 20px;
+    }
+
+    .section-content::before,
+    .section-content::after {
+        content: "";
+        position: absolute;
+        pointer-events: none; /* Ensure pseudo-elements don't interfere with interaction */
+    }
+
+    /* Outer black shadow */
+    .section-content::before {
+        inset: 0;
+        border-radius: 20px;
+        box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.22);
+    }
+
+    /* Outer bottom white highlight using a border */
+    .section-content::after {
+        left: 0px;
+        right: 0px;
+        bottom: -4px;
+        top: 0;
+        border-top: 2px solid rgba(0, 0, 0, 0.09); /* for the inner top shadow */
+        border-bottom: 2px solid rgba(255, 255, 255, 0.79);
+        border-radius: 20px;
+    }
 
 .section-footer {
     color: #4c5c6c;
