--- a/OldiOS/OldiOS.Shared/Apps/UIKit/UISwitch.razor.css
+++ b/OldiOS/OldiOS.Shared/Apps/UIKit/UISwitch.razor.css
@@ -3,8 +3,8 @@
 .uiswitch {
     position: relative;
     display: inline-block;
-    width: 100px;
-    height: 56px;
+    width: 154px;
+    height: 54px;
     cursor: pointer;
 }
 
@@ -37,12 +37,12 @@
 .switch-slider:after {
     content: "OFF";
     position: absolute;
-    right: 12px;
+    right: 24px;
     top: 50%;
     transform: translateY(-50%);
     color: #8e8e93;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-size: 24px;
+    font-size: 32px;
     font-weight: bold;
     text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
     transition: opacity 0.3s;
@@ -52,12 +52,12 @@
 .switch-slider:before {
     content: "ON";
     position: absolute;
-    left: 16px;
+    left: 24px;
     top: 50%;
     transform: translateY(-50%);
     color: white;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-size: 24px;
+    font-size: 32px;
     font-weight: bold;
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.3);
     opacity: 0;
@@ -68,14 +68,15 @@
 /* The sliding knob */
 .slider-knob {
     position: absolute;
-    height: 50px;
-    width: 50px;
-    left: 2px;
-    top: 2px;
+    height: 51px;
+    width: 51px;
+    left: 1px;
+    top: 1px;
     background-color: white;
     transition: .3s;
     border-radius: 50%;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+    z-index:10;
 }
 
 input:checked + .switch-slider {
@@ -92,7 +93,7 @@ input:checked + .switch-slider:after {
 }
 
 input:checked + .switch-slider .slider-knob {
-    transform: translateX(44px);
+    transform: translateX(100px);
 }
 
 input:disabled + .switch-slider {
