--- a/OldiOS/OldiOS.Shared/Apps/UIKit/UISwitch.razor.css
+++ b/OldiOS/OldiOS.Shared/Apps/UIKit/UISwitch.razor.css
@@ -6,7 +6,21 @@
     width: 154px;
     height: 54px;
     cursor: pointer;
+    border-radius: 56px;
+    overflow: hidden;
 }
+
+    .uiswitch:after {
+        content: "";
+        position: absolute;
+        right: -2px;
+        left: -2px;
+        top: 0;
+        bottom: 0;
+        z-index: 1;
+        background-image: url(/_content/OldiOS.Shared/images/uikit/UISwitch_shape_shadow.png); 
+        mix-blend-mode:normal;
+    }
 
 .uiswitch.disabled {
     opacity: 0.4;
@@ -26,11 +40,9 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #e5e5ea;
-    border: 1px solid #c7c7cc;
+    background-color: #EEEEEE;
     transition: .3s;
     border-radius: 56px;
-    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
 }
 
 /* OFF text */
@@ -52,7 +64,7 @@
 .switch-slider:before {
     content: "ON";
     position: absolute;
-    left: 24px;
+    left: 29px;
     top: 50%;
     transform: translateY(-50%);
     color: white;
@@ -68,20 +80,20 @@
 /* The sliding knob */
 .slider-knob {
     position: absolute;
-    height: 51px;
-    width: 51px;
-    left: 1px;
-    top: 1px;
-    background-color: white;
-    transition: .3s;
-    border-radius: 50%;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-    z-index:10;
+    height: 54px;
+    width: 58px;
+    left: -2px;
+    top: 0px;
+    transition: .3s; 
+    background-image: url(/_content/OldiOS.Shared/images/uikit/UISwitch_thumb.png);
+    z-index: 10;
 }
+    .slider-knob:active {
+        background-image: url(/_content/OldiOS.Shared/images/uikit/UISwitch_thumb_pressed.png);
+    }
 
 input:checked + .switch-slider {
-    background: linear-gradient(to bottom, #4cd964 0%, #3ec954 100%);
-    border-color: #3ec954;
+    background: #007FEA;
 }
 
 input:checked + .switch-slider:before {
