--- a/OldiOS/OldiOS.Shared/Apps/UIKit/UINavigationBar.razor.css
+++ b/OldiOS/OldiOS.Shared/Apps/UIKit/UINavigationBar.razor.css
@@ -36,24 +36,40 @@
 .navbar-button {
     display: flex;
     align-items: center;
+    height: 60px;
+    padding: 8px;
     gap: 5px;
-    background: linear-gradient(to bottom, #6d7886 0%, #4e5866 100%);
-    border: 1px solid #2d3845;
-    border-radius: 10px;
-    padding: 12px 20px;
+    border-style: solid;
+    border-width: 10px;
+    border-image-source: url(/_content/OldiOS.Shared/images/uikit/UINavigationBar_button.png);
+    border-image-slice: 10 fill;
+    border-image-repeat: stretch;
+    background-color: transparent;
     color: white;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-size: 28px;
+    font-size: 24px;
+    font-weight: bold;
     cursor: pointer;
-    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.5);
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
-    transition: background 0.1s ease;
+    text-shadow: 0 -2px 0 rgba(0, 0, 0, 0.5);
+    transition: border-image-source 0.1s ease;
+    /*doesn't centre in navbar properly, offset by a pixel works, (todo: test other browsers other than chrome)*/
+    position: relative;
+    top: 1px;
 }
 
 .navbar-back-button:active,
-.navbar-button:active {
-    background: linear-gradient(to bottom, #4e5866 0%, #6d7886 100%);
-    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.3);
+.navbar-button:active {  
+    border-image-source: url(/_content/OldiOS.Shared/images/uikit/UINavigationBar_button_pressed.png);
+}
+
+
+.navbar-back-button {
+    border-left-width: 29px;
+    border-image-source: url(/_content/OldiOS.Shared/images/uikit/UINavigationBar_button_back.png);
+    border-image-slice: 10 10 10 29 fill;
+}
+.navbar-back-button:active {  
+    border-image-source: url(/_content/OldiOS.Shared/images/uikit/UINavigationBar_button_back_pressed.png);
 }
 
 .back-chevron {
