--- a/OldiOS/OldiOS.Shared/System/StatusBar.razor.css
+++ b/OldiOS/OldiOS.Shared/System/StatusBar.razor.css
@@ -10,14 +10,17 @@
     box-sizing: border-box;
     position: relative;
     z-index: 100;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-    font-size: 26px;
+    font-size: 28px;
     font-weight: bold;
+    border-style: solid;
+    border-width: 4px;
+    border-image-source: url(/_content/OldiOS.Shared/images/status/translucent_base.png);
+    border-image-slice: 4 fill;
+    border-image-repeat: stretch;
 }
 
 /* Default style - semi-transparent for home screen */
 .status-bar-white-on-black-etch{
-    background-color:  rgba(0,0,0,0.6);
     color: rgba(255,255,255,0.8);
     text-shadow: 0 1px 2px rgba(0,0,0,0.8);
 }
@@ -28,9 +31,10 @@
 
 /* Coloured style - for apps */
 .status-bar-coloured {
+    border-image-source: url(/_content/OldiOS.Shared/images/status/silver_base.png);
     background-color: #000000;
-    color: white;
-    text-shadow: none;
+    color: black;
+    text-shadow: 0 1px 0 rgba(255,255,255,0.8), 0 2px 0 rgba(255,255,255,0.4);
 }
 
 /* Left section - Carrier and WiFi */
