--- a/OldiOS/OldiOS.Shared/Apps/Music/MusicApp.razor
+++ b/OldiOS/OldiOS.Shared/Apps/Music/MusicApp.razor
@@ -45,11 +45,12 @@
         {
             <UITableView>
                 <UITableViewSection>
-                    <UITableViewCell Text="Genres" ShowDisclosure="true" />
+                    <UITableViewCell Text="Audiobooks" ShowDisclosure="true" />
                     <UITableViewCell Text="Compilations" ShowDisclosure="true" />
                     <UITableViewCell Text="Composers" ShowDisclosure="true" />
-                    <UITableViewCell Text="Podcasts" ShowDisclosure="true" />
-                    <UITableViewCell Text="Audiobooks" ShowDisclosure="true" IsLast="true" />
+                    <UITableViewCell Text="Genres" ShowDisclosure="true" />
+                    <UITableViewCell Text="iTunes U" ShowDisclosure="true" />
+                    <UITableViewCell Text="Podcasts" ShowDisclosure="true" IsLast="true" />
                 </UITableViewSection>
             </UITableView>
         }
