--- a/OldiOS/OldiOS.Shared/Apps/Settings/GeneralSettings.razor
+++ b/OldiOS/OldiOS.Shared/Apps/Settings/GeneralSettings.razor
@@ -3,7 +3,7 @@
 <div class="settings-general-app">
     <UINavigationBar Title="General" BackButtonText="Settings" OnBackClick="@HandleBack" />
     
-    <div class="settings-content">
+    <div class="navigation-view-content">
         <UITableView Grouped="true">
             <UITableViewSection Header="ABOUT">
                 <UITableViewCell Text="Name" Detail="@deviceName" ShowDisclosure="true" />
