--- a/OldiOS/OldiOS.Shared/Apps/Settings/SettingsApp.razor
+++ b/OldiOS/OldiOS.Shared/Apps/Settings/SettingsApp.razor
@@ -1,48 +1,64 @@
 @using OldiOS.Shared.Apps.UIKit
 
-<div class="settings-app">
-    <UINavigationBar Title="Settings" />
-    
-    <div class="settings-content">
-        <UITableView Grouped="true">
-            <UITableViewSection>
-                <UITableViewCell Text="Airplane Mode" ShowToggle="true" ToggleValue="false" Icon="images/icons/settings/airplane.png" />
-                <UITableViewCell Text="Wi-Fi" Detail="Not Connected" ShowDisclosure="true" Icon="images/icons/settings/wifi.png" />
-                <UITableViewCell Text="Bluetooth" Detail="Off" ShowDisclosure="true" Icon="images/icons/settings/bluetooth.png" />
-                <UITableViewCell Text="Cellular" ShowDisclosure="true" Icon="images/icons/settings/cellular.png" IsLast="true" />
-            </UITableViewSection>
+<ViewNavigator @ref="navigator">
+    <RootView>
+        <div class="settings-app">
+            <UINavigationBar Title="Settings" />
             
-            <UITableViewSection>
-                <UITableViewCell Text="Notifications" ShowDisclosure="true" Icon="images/icons/settings/notifications.png" />
-                <UITableViewCell Text="Control Center" ShowDisclosure="true" Icon="images/icons/settings/controlcenter.png" />
-                <UITableViewCell Text="Do Not Disturb" ShowDisclosure="true" Icon="images/icons/settings/dnd.png" IsLast="true" />
-            </UITableViewSection>
-            
-            <UITableViewSection>
-                <UITableViewCell Text="General" ShowDisclosure="true" Icon="images/icons/settings/general.png" />
-                <UITableViewCell Text="Sounds" ShowDisclosure="true" Icon="images/icons/settings/sounds.png" />
-                <UITableViewCell Text="Brightness & Wallpaper" ShowDisclosure="true" Icon="images/icons/settings/brightness.png" />
-                <UITableViewCell Text="Privacy" ShowDisclosure="true" Icon="images/icons/settings/privacy.png" IsLast="true" />
-            </UITableViewSection>
-            
-            <UITableViewSection>
-                <UITableViewCell Text="iCloud" ShowDisclosure="true" Icon="images/icons/settings/icloud.png" />
-                <UITableViewCell Text="Mail, Contacts, Calendars" ShowDisclosure="true" Icon="images/icons/settings/mail.png" />
-                <UITableViewCell Text="Notes" ShowDisclosure="true" Icon="images/icons/settings/notes.png" />
-                <UITableViewCell Text="Reminders" ShowDisclosure="true" Icon="images/icons/settings/reminders.png" />
-                <UITableViewCell Text="Phone" ShowDisclosure="true" Icon="images/icons/settings/phone.png" />
-                <UITableViewCell Text="Messages" ShowDisclosure="true" Icon="images/icons/settings/messages.png" />
-                <UITableViewCell Text="FaceTime" ShowDisclosure="true" Icon="images/icons/settings/facetime.png" />
-                <UITableViewCell Text="Maps" ShowDisclosure="true" Icon="images/icons/settings/maps.png" />
-                <UITableViewCell Text="Safari" ShowDisclosure="true" Icon="images/icons/settings/safari.png" />
-                <UITableViewCell Text="Music" ShowDisclosure="true" Icon="images/icons/settings/music.png" />
-                <UITableViewCell Text="Videos" ShowDisclosure="true" Icon="images/icons/settings/videos.png" />
-                <UITableViewCell Text="Photos & Camera" ShowDisclosure="true" Icon="images/icons/settings/photos.png" IsLast="true" />
-            </UITableViewSection>
-        </UITableView>
-    </div>
-</div>
+            <div class="navigation-view-content">
+                <UITableView Grouped="true">
+                    <UITableViewSection>
+                        <UITableViewCell Text="Airplane Mode" ShowToggle="true" ToggleValue="false" Icon="images/icons/settings/airplane.png" />
+                        <UITableViewCell Text="Wi-Fi" Detail="Not Connected" ShowDisclosure="true" Icon="images/icons/settings/wifi.png" />
+                        <UITableViewCell Text="Bluetooth" Detail="Off" ShowDisclosure="true" Icon="images/icons/settings/bluetooth.png" />
+                        <UITableViewCell Text="Cellular" ShowDisclosure="true" Icon="images/icons/settings/cellular.png" IsLast="true" />
+                    </UITableViewSection>
+                    
+                    <UITableViewSection>
+                        <UITableViewCell Text="Notifications" ShowDisclosure="true" Icon="images/icons/settings/notifications.png" />
+                        <UITableViewCell Text="Control Center" ShowDisclosure="true" Icon="images/icons/settings/controlcenter.png" />
+                        <UITableViewCell Text="Do Not Disturb" ShowDisclosure="true" Icon="images/icons/settings/dnd.png" IsLast="true" />
+                    </UITableViewSection>
+                    
+                    <UITableViewSection>
+                        <UITableViewCell Text="General" ShowDisclosure="true" Icon="images/icons/settings/general.png" OnClick="@(() => GoToGeneral())" />
+                        <UITableViewCell Text="Sounds" ShowDisclosure="true" Icon="images/icons/settings/sounds.png" />
+                        <UITableViewCell Text="Brightness & Wallpaper" ShowDisclosure="true" Icon="images/icons/settings/brightness.png" />
+                        <UITableViewCell Text="Privacy" ShowDisclosure="true" Icon="images/icons/settings/privacy.png" IsLast="true" />
+                    </UITableViewSection>
+                    
+                    <UITableViewSection>
+                        <UITableViewCell Text="iCloud" ShowDisclosure="true" Icon="images/icons/settings/icloud.png" />
+                        <UITableViewCell Text="Mail, Contacts, Calendars" ShowDisclosure="true" Icon="images/icons/settings/mail.png" />
+                        <UITableViewCell Text="Notes" ShowDisclosure="true" Icon="images/icons/settings/notes.png" />
+                        <UITableViewCell Text="Reminders" ShowDisclosure="true" Icon="images/icons/settings/reminders.png" />
+                        <UITableViewCell Text="Phone" ShowDisclosure="true" Icon="images/icons/settings/phone.png" />
+                        <UITableViewCell Text="Messages" ShowDisclosure="true" Icon="images/icons/settings/messages.png" />
+                        <UITableViewCell Text="FaceTime" ShowDisclosure="true" Icon="images/icons/settings/facetime.png" />
+                        <UITableViewCell Text="Maps" ShowDisclosure="true" Icon="images/icons/settings/maps.png" />
+                        <UITableViewCell Text="Safari" ShowDisclosure="true" Icon="images/icons/settings/safari.png" />
+                        <UITableViewCell Text="Music" ShowDisclosure="true" Icon="images/icons/settings/music.png" />
+                        <UITableViewCell Text="Videos" ShowDisclosure="true" Icon="images/icons/settings/videos.png" />
+                        <UITableViewCell Text="Photos & Camera" ShowDisclosure="true" Icon="images/icons/settings/photos.png" IsLast="true" />
+                    </UITableViewSection>
+                </UITableView>
+            </div>
+        </div>
+    </RootView>
+</ViewNavigator>
 
 @code {
-    
+    private ViewNavigator navigator;
+
+    private async Task GoToGeneral()
+    {
+        await navigator.Push(RenderGeneralSettings());
+    }
+
+    private RenderFragment RenderGeneralSettings() => builder =>
+    {
+        builder.OpenComponent<GeneralSettings>(0);
+        builder.AddAttribute(1, "OnBack", EventCallback.Factory.Create(this, () => navigator.Pop()));
+        builder.CloseComponent();
+    };
 }
