--- a/OldiOS/OldiOS.Shared/Apps/UIKit/UINavigationBar.razor.css
+++ b/OldiOS/OldiOS.Shared/Apps/UIKit/UINavigationBar.razor.css
@@ -2,6 +2,7 @@
 
 .uinavigationbar {
     height: 88px;
+    min-height: 88px;
     /*    background: linear-gradient(to bottom, #b0b9c5 0%, #8e98a6 50%, #6d7886 51%, #4e5866 100%);*/
     background-image: url(/_content/OldiOS.Shared/images/uikit/UINavigationBar_bg.png);
     display: flex;
@@ -9,7 +10,7 @@
     justify-content: space-between;
     padding: 0 20px;
     border-bottom: 1px solid #2d3845;
-    position: relative; 
+    position: relative;
 }
 
 .navbar-left,
