--- a/OldiOS/OldiOS.Shared/Pages/Springboard/Springboard.razor
+++ b/OldiOS/OldiOS.Shared/Pages/Springboard/Springboard.razor
@@ -59,7 +59,7 @@
         <div class="dock-icons">
             @foreach (var app in DockApps)
             {
-                <OldiOS.Shared.Pages.Springboard.Components.AppIcon App="app" OnAppClick="HandleAppClick" />
+                <OldiOS.Shared.Pages.Springboard.Components.AppIcon App="app" OnAppClick="HandleAppClick" InDock="true" />
             }
         </div>
     </div>
