--- a/OldiOS/OldiOS.Shared/Pages/Springboard/Components/AppIcon.razor.css
+++ b/OldiOS/OldiOS.Shared/Pages/Springboard/Components/AppIcon.razor.css
@@ -30,7 +30,7 @@
 }
 
 /* Use different shadow for dock icons */
-.dock-icons .icon-shadow {
+.app-icon.in-dock .icon-shadow {
     width: 118px;
     height: 120px;
     background-image: url(/_content/OldiOS.Shared/images/icon_shadow_dock.png);
@@ -50,6 +50,28 @@
     border-radius: 20px;
     position: relative;
     z-index: 1;
+}
+
+/* Reflection element: same size as icon, mirrored vertically */
+.icon-reflection {
+    position:absolute;
+    width: 118px;
+    height: 118px;
+    background-size: cover;
+    background-position: top;
+    background-repeat: no-repeat;
+    border-radius: 20px;
+    transform: scaleY(-1) translateY(-100%);
+    opacity: 0.5;
+    margin-top: -6px;
+    mask-image: linear-gradient(to bottom, rgba(0,0,0,0.0) 0%, rgba(0,0,0,0.45) 70%);
+    -webkit-mask-image: linear-gradient(to bottom, rgba(0,0,0,0.0) 0%, rgba(0,0,0,0.45) 70%);
+    display: none; /* Hidden by default; enabled for dock icons */
+}
+
+/* Show reflection only for icons in the dock */
+.app-icon.in-dock .icon-reflection {
+    display: block;
 }
 
 .app-icon span {
