--- a/OldiOS/OldiOS.Shared/Pages/Springboard/Springboard.razor.css
+++ b/OldiOS/OldiOS.Shared/Pages/Springboard/Springboard.razor.css
@@ -356,5 +356,6 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
+    margin-top: 14px;
     padding: 0 15px;
 }
